# openarm_gripette_simu

./: README.md  main.py  pyproject.toml
examples/: cartesian_square.py  cartesian_square_grpc.py  check_grabette_reachable.py  collect_grasp_data.py  collect_grasp_dataset.py  collect_grasp_dataset_arm.py  collect_reach_dataset.py  grabette_trajectory.py  gripper_demo.py  grpc_client_demo.py  joint_control.py  manual_grasp_test.py  manual_grasp_test_arm.py  push_to_hub.py  replay_grabette_on_arm.py  sample_init_joints.py  table_scene.py
openarm_gripette_simu/: __init__.py  __main__.py  arm_servicer.py  camera.py  domain_randomization.py  gripper_servicer.py  ik_feasibility.py  kinematics.py  real_arm_interface.py  real_server.py  rotation.py  server.py  simulation.py
openarm_gripette_simu/proto/: arm_pb2.py  arm_pb2.pyi  arm_pb2_grpc.py  gripper_pb2.py  gripper_pb2.pyi  gripper_pb2_grpc.py
proto/: arm.proto  gripper.proto
scenes/: grabette_grasp.xml  table_grasp.xml  table_red_cube.xml
