[project]
name = "openarm-gripette-simu"
version = "0.1.0"
description = "MuJoCo simulation of the OpenArm right arm + Gripette gripper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.6",
    "placo>=0.9",
    "numpy",
    "opencv-python>=4.9",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "openarm-gripette-model",
]

[project.optional-dependencies]
dev = ["grpcio-tools>=1.60"]
dataset = ["lerobot>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# openarm-gripette-model = { git = "https://github.com/pollen-robotics/openarm_gripette_model" }
# Using local source until gripper frame is pushed:
openarm-gripette-model = { path = "../openarm_gripette_model", editable = true }
